# SuperDuck

./: AWSUtils.cpp  AWSUtils.h  CMakeLists.txt  ElPato.rc.in  ItemsTree.cpp  ItemsTree.h  ListExportUtils.cpp  MainWindow.cpp  MainWindow.h  MainWindow.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SplashScreen.cpp  TreeModel.cpp  TreeModel.h  Utils.cpp  Utils.h  main.cpp  readme.md
Dialogs/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  ProgressDialog.cpp  ProgressDialog.h  ProgressDialog.ui  SettingsDialog.cpp  SettingsDialog.h  SettingsDialog.ui  SplashScreen.cpp  SplashScreen.h
Model/: ItemsTree.cpp  ItemsTree.h  TreeModel.cpp  TreeModel.h
Utils/: AWSUtils.cpp  AWSUtils.h  ListExportUtils.cpp  ListExportUtils.h  Utils.cpp  Utils.h
installer/: script.iss.in
resources/: resources.qrc
